--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -538,6 +538,49 @@ section {
     margin-right: 1rem;
     line-height: 2;
 }
+
+/* pagination */
+
+ul.pagination {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.25rem;
+    text-align:center;
+    margin:0 auto;
+    width:15%;
+
+}
+ul.pagination .page-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: -webkit-match-parent;
+    display: list-item;
+    font-size: 2rem;
+}
+ul.pagination .page-item .page-link{
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: 15px;
+    line-height: 1.25;
+    color: #007bff;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.5rem;
+}
+ul.pagination .page-item .page-link:hover{
+    color: #0056b3;
+    text-decoration: none;
+    background-color: #e9ecef;
+    border-color: #dee2e6;
+}
+
 /* booking options */
 .booking-options {
     margin-top: 8rem;
@@ -910,6 +953,30 @@ section {
     display: flex;
     align-items: center;
 }
+.yard-detail
+    .yard-detail-content
+    .yard-detail-right
+    .yard-detail-list
+    .yard-detail-item
+    .button-time {
+    height: 7rem;
+    align-items: center;
+    color: #3d348b;
+    border-radius: 0.5rem;
+    background-color: #fff;
+    margin-left: 0.5rem;
+    border: 2px solid #008cba;
+}
+.yard-detail
+    .yard-detail-content
+    .yard-detail-right
+    .yard-detail-list
+    .yard-detail-item
+    .button-time:hover {
+    background-color: #008cba;
+    color: #fff;
+}
+
 .yard-detail
     .yard-detail-content
     .yard-detail-right
