--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -456,13 +456,11 @@ section {
 }
 .news-single .news-single-list {
     display: flex;
-    flex-wrap: wrap;
     gap: 2rem;
     margin-top: 2rem;
-    justify-content: center;
 }
 .news-single .news-single-list .news-single-item {
-    flex: 1 1 30%;
+    width: 35rem;
 }
 .news-single .news-single-list .news-single-item .news-single-image {
     width: 100%;
@@ -488,6 +486,7 @@ section {
     margin-top: 1rem;
 }
 .news-single .btn {
+    margin-top: 1rem;
     font-size: 1.5rem;
     color: var(--white);
     border-radius: 1rem;
@@ -837,10 +836,10 @@ ul.pagination .page-item .page-link:hover{
 .yard .yard-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1rem;
 }
 .yard .yard-list .yard-item {
-    flex: 1 1 30%;
+    width: 35rem;
 }
 .yard .yard-list .yard-item .yard-image {
     width: 100%;
@@ -866,8 +865,9 @@ ul.pagination .page-item .page-link:hover{
 }
 .yard .yard-list .yard-item {
     transform: translateY(-0.5rem);
-    box-shadow: 0 0 1rem rgb(0 0 0 / 50%);
+    box-shadow: 0 0 1rem rgb(0 0 0 / 30%);
     height: 40rem;
+    border-radius: .5rem;
     overflow: hidden;
 }
 .yard .yard-list .yard-item .yard-text .yard-price p {
