--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Nunito", sans-serif;
-    text-decoration: none;
+    text-decoration: none!important;
     outline: none;
     border: none;
     list-style: none;
@@ -103,6 +103,7 @@ section {
     font-size: 1.6rem;
     font-weight: 500;
     color: var(--black2);
+    text-decoration: none;
 }
 .header .navbar .menu li a:hover {
     color: var(--yellow);
@@ -962,11 +963,11 @@ ul.pagination .page-item .page-link:hover{
     height: 7rem;
     width : 10rem;
     align-items: center;
-    color: #3d348b;
+    color: var(--yellow);
     border-radius: 0.5rem;
     background-color: #fff;
     margin-left: 0.5rem;
-    border: 2px solid #008cba;
+    border: 2px solid var(--black2);
 }
 .yard-detail
     .yard-detail-content
@@ -974,8 +975,8 @@ ul.pagination .page-item .page-link:hover{
     .yard-detail-list
     .yard-detail-item
     .button-time:hover {
-    background-color: #008cba;
-    color: #fff;
+    background-color: var(--yellow);
+    color: var(--black2);
 }
 
 .yard-detail
@@ -1058,9 +1059,9 @@ ul.pagination .page-item .page-link:hover{
 }
 .yard-detail .yard-detail-item img {
     width: 100%;
-    height: 20rem;
+    height: 22rem;
     border-radius: 0.5rem;
-    box-shadow: 0 0 1rem rgb(0 0 0 / 50%);
+    box-shadow: 0 0 1rem rgb(0 0 0 / 30%);
 }
 .yard-detail .yard-detail-item img:hover {
     transform: scale(1.1);
@@ -1191,6 +1192,25 @@ ul.pagination .page-item .page-link:hover{
     font-size: 1.3rem;
     color: var(--black2);
     margin-top: 0.5rem;
+}
+.yard-detail-list h4{
+    font-size: 2rem;
+    color: var(--yellow);
+}
+.row label{
+    font-size: 1.6rem;
+    color: var(--black2);
+}
+.modal-title{
+    font-size: 2rem;
+    color: var(--yellow);
+}
+.h-blue{
+    font-size: 1.2rem;
+    color: var(--gray-dark);
+}
+.inputBox{
+    font-size: 1.5rem;
 }
 /* login */
 .yard-login {
@@ -1597,6 +1617,135 @@ ul.pagination .page-item .page-link:hover{
 }
 .typeahead li a:hover{
     color: var(--yellow);
+}
+.be-comment-block {
+    margin-bottom: 50px !important;
+    border: 1px solid #edeff2;
+    border-radius: 2px;
+    padding: 50px 70px;
+    border:1px solid #ffffff;
+}
+
+.comments-title {
+    font-size: 16px;
+    color: #262626;
+    margin-bottom: 15px;
+    font-family: 'Conv_helveticaneuecyr-bold';
+}
+
+.be-img-comment {
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-bottom: 15px;
+}
+
+.be-ava-comment {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.be-comment-content {
+    margin-left: 80px;
+}
+
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.be-comment-name {
+    font-size: 13px;
+    font-family: 'Conv_helveticaneuecyr-bold';
+}
+
+.be-comment-content a {
+    color: #383b43;
+}
+
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.be-comment-time {
+    text-align: right;
+}
+
+.be-comment-time {
+    font-size: 11px;
+    color: #b4b7c1;
+}
+
+.be-comment-text {
+    font-size: 13px;
+    line-height: 18px;
+    color: #7a8192;
+    display: block;
+    background: #f6f6f7;
+    border: 1px solid #edeff2;
+    padding: 15px 20px 20px 20px;
+}
+
+.form-group.fl_icon .icon {
+    position: absolute;
+    top: 1px;
+    left: 16px;
+    width: 48px;
+    height: 48px;
+    background: #f6f6f7;
+    color: #b5b8c2;
+    text-align: center;
+    line-height: 50px;
+    -webkit-border-top-left-radius: 2px;
+    -webkit-border-bottom-left-radius: 2px;
+    -moz-border-radius-topleft: 2px;
+    -moz-border-radius-bottomleft: 2px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.form-group .form-input {
+    font-size: 13px;
+    line-height: 50px;
+    font-weight: 400;
+    color: #b4b7c1;
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 1px solid #edeff2;
+    border-radius: 3px;
+}
+.form-group.fl_icon .form-input {
+    padding-left: 1rem;
+}
+
+.form-group textarea.form-input {
+    height: 150px;
+}
+.form-group textarea.form-input{
+    margin-top: 1rem;
+}
+
+.row>*{
+    padding: 0;
+}
+.row .btn{
+    width: 10rem;
+    border-radius: .5rem;
+    margin-top: 1rem;
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+.dl, ol, ul{
+    margin: 0;
+}
+.modal-body form{
+    padding: 2rem;
 }
 /* responsive */
 @media (max-width: 1200px) {
