--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1689,7 +1689,7 @@ ul.pagination .page-item .page-link:hover {
 /* end modal */
 /* history-yard */
 .history-yard {
-    padding: 15rem 1rem;
+    padding: 10rem 1rem 3rem 1rem;
 }
 .history-yard h1 {
     font-size: 2.5rem;
@@ -1712,7 +1712,7 @@ ul.pagination .page-item .page-link:hover {
 }
 .border-light {
     border: 0.1rem solid #fafafa;
-    background-image: url(../images/login2.jpg);
+    /* background-image: url(../images/login2.jpg); */
 }
 .form-history {
     padding: 2rem;
