--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1591,6 +1591,41 @@ ul.pagination .page-item .page-link:hover {
 .news-list .news-content p {
     font-size: 1.4rem;
 }
+/* contact */
+.contact{
+    padding: 15rem 0;
+  }
+  .contact h1{
+    font-size: 2.5rem;
+    color: var(--yellow);
+    margin-bottom: 2rem;
+  }
+  .contact-map{
+    width: 100%;
+  }
+  .contact-img img{
+    width: 100%!important;
+  }
+
+  .contact-content{
+    padding: 3rem 9%;
+  }
+  .mb-contact{
+    margin-bottom: 1rem;;
+  }
+  .contact .form-control{
+    padding: 2rem;
+  }
+  .contact .btn{
+    display: inline-block;
+    padding: 1rem 2.5rem;
+    background-color: var(--yellow);
+    font-size: 1.5rem;
+    color: var(--white);
+    margin-top: 2rem;
+    border-radius: 1rem;
+  }
+  /* end contact */
 /* news-detail */
 .news-detail {
     padding-top: 15rem;
